--- a/style.css
+++ b/style.css
@@ -298,6 +298,7 @@ margin-bottom: 24px;
       }
       hr{
         opacity: 0.3;
+        
       }
       .chrome>p{
         color:var(--color) ;
@@ -368,9 +369,15 @@ margin-bottom: 24px;
   }
   .head>h2{
     text-align:center;
+    font-family: sans-serif;
+    line-height: 1.7rem;
+    font-weight: var(--font-weight);
   }
   .head>p{
     text-align: center;
+    line-height: 1.9rem;
+    font-weight: 400;
+    color: var(--color);
   }
   .question-section{
     background-color:var(--feature-bg-color) ;
@@ -389,6 +396,7 @@ margin-bottom: 24px;
     margin-top: 48px;
     height: 320px;
     width: 455px;
+    /* width: 455px; */
   }
   .btn3{
     display: flex;
@@ -399,6 +407,81 @@ margin-bottom: 24px;
 display: flex;
 justify-content: center;
 flex-direction: column;
+margin-left: 200px;
+width: 75%;
+  }
+  .footer{
+    width: 100%;
+    background-color:  #5267df;;
+    height: 250px;
+    padding-top:80px ;
+  }
+  #p1{
+    font-size: medium;
+    color: white;
+    padding: 10px;
+  }
+  #p2{
+    color: white;
+    font-weight: 200;
+    font-size: 25px;
+    word-spacing: 0.1rem;
+    padding: 10px;
+    
+  }
+  .email{
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+    gap:30px;
+    margin-top: 20px;
+  }
+  #email{
+    background-color: #ffffff;
+    width: 350px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    font-size:medium;
+    padding: 10px;
+    color: rgb(194, 194, 194);
+  }
+  #button{
+    background-color: #fa5959;
+    border: none;
+    border-radius: 5px;
+    font-size:medium;
+    padding: 10px;
+    color: white;
+    width: 150px;
+  }
+  .last{
+    width: 100%;
+    height: 100px;
+    background: #242a45;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .list{
+    display: flex;
+    align-items: center;
+  }
+  .list>li{
+    color: white;
+    font-size: smaller;
+  }
+  .logo>img{
+   background-color: white;
+  }
+  .lasticons{
+    display: flex;
+    gap:30px;
+    font-size: 20px;
+  }
+  #last{
+    display: flex;
+    gap:20px;
   }
     
     
@@ -408,8 +491,76 @@ flex-direction: column;
 
 @media screen and (min-width:0px) and (max-width:480px) {
 
+
+
+    .last{
+        flex-direction: column;
+        height: 200px;
+  
+    }
+    #last{
+        flex-direction: column;
+        
+       gap:3rem;
+    }
+    .list>li{
+        font-size: x-small;
+    }
+    .logo{
+        display: flex;
+        justify-content: center;
+    }
+hr{
+    width: 95%;
+}
+body{
+    padding: 0;
+    margin: 0;
+}
+
+
+
+
+
+#p2{
+    text-wrap: wrap;
+}
+.footer{
+    padding: 20px;
+    width: 91.5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 300px;
+}
+.email{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+    
+}
+#email{
+    width: 395px;
+}
+#button{
+    width: 420px;
+   
+    height: 45px;
+}
+
+
+
+
 .head{
     margin: 0px;
+    
+
+}
+
+.holder{
+    margin: 0;
+    justify-content: center;
 }
 .questions{
     margin: 0px;
